# D4A-Event

./: .gitignore  README.md  TODO.md  platformio.ini
.github/: copilot-instructions.md
data/: CamService.css  CamService.html  CamService.js  LedService.css  LedService.html  LedService.js  LogService.css  LogService.html  LogService.js  MetricService.css  MetricService.html  amaker.css  (+10 more)
example-clients/python/: .gitignore  .last_server  README.md  USER_GUIDE.md  config.py  customize.py  main.py  pyproject.toml  requirements.txt  setup.sh  tox.ini
example-clients/python/bot_simulator/: README.md  USER_GUIDE.md  __init__.py  __main__.py  app.py  protocol.py  servo_widget.py
example-clients/python/tests/: test_bot_config.py  test_merge_commands.py
example-clients/python/udp_client/: __init__.py  __main__.py  bot_config.py
example-clients/python/udp_client/control/: __init__.py  controller.py  stick_helpers.py
example-clients/python/udp_client/input/: __init__.py  calibration_wizard.py  input_manager.py  joystick_calibration.py  joystick_handler.py  keyboard_handler.py
example-clients/python/udp_client/network/: __init__.py  udp_client.py
example-clients/python/udp_client/state/: __init__.py  app_state.py
example-clients/python/udp_client/ui/: __init__.py  app.py  constants.py
example-clients/python/udp_client/ui/widgets/: __init__.py  action_history.py  action_indicator.py  bot_status.py  config_inspector.py  connection_wizard.py  device_list.py  help_panel.py  joystick_visualizer.py  keyboard_display.py  server_panel.py  statistics.py  virtual_dpad.py
(+103 files in other folders)
